Se modifico el html para que la url sea mas presentable al momento de compatir la pagina y nuevos favicon

--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./favicon/logo.ico" />
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aram Musset</title>
+    <meta property="og:title" content="Aram portfolio">
+    <meta property="og:description" content="Programador Full-Stack apasionado por la tecnología, orientado a enfrentar desafíos y a crear proyectos de alta calidad, escalables y profesionales.">
+    <meta property="og:image" content="/general/Full-Stack">
+    <meta property="og:url" content="https://portfolio-aram.vercel.app/">
+    <meta property="og:type" content="website">
   </head>
   <body>
     <div id="root"></div>
