Se cambio de sitio la imagen full-stack.png y se cambio la url de imagen de html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Aram Musset</title>
     <meta property="og:title" content="Aram portfolio">
     <meta property="og:description" content="Programador Full-Stack apasionado por la tecnología, orientado a enfrentar desafíos y a crear proyectos de alta calidad, escalables y profesionales.">
-    <meta property="og:image" content="https://github.com/RamCodeZ3/Portafolio/blob/main/public/general/Full-Stack.png?raw=true">
+    <meta property="og:image" content="https://portfolio-aram.vercel.app/Full-Stack.png">">
     <meta property="og:url" content="https://portfolio-aram.vercel.app/">
     <meta property="og:type" content="website">
   </head>
