--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="manifest" href="/favicon/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aram Musset</title>
-    <meta property="og:title" content="Aram portfolio">
+    <meta property="og:title" content="Aram Musset">
     <meta property="og:description" content="Programador Full-Stack apasionado por la tecnología, orientado a enfrentar desafíos y a crear proyectos de alta calidad, escalables y profesionales.">
-    <meta property="og:image" content="https://portfolio-aram.vercel.app/Full-Stack.png">
     <meta property="og:url" content="https://portfolio-aram.vercel.app/">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://portfolio-aram.vercel.app/Full-Stack.png">
   </head>
   <body>
     <div id="root"></div>
